--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clientd": "webpack ---debug --colors --display-error-details --config ./webpack/webpack.config.dev.js --watch",
-	"serverd": "./node_modules/.bin/supervisor ./src/server/server.js",
-    "clientp" : "webpack --colors --display-error-details --config ./webpack/webpack.config.prod.js"
+    "serverd": "./node_modules/.bin/supervisor ./src/server/server.js",
+    "clientp": "webpack --colors --display-error-details --config ./webpack/webpack.config.prod.js"
   },
   "author": "SCO",
   "license": "ISC",
@@ -15,8 +15,13 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "keymirror": "^0.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.14.0"
   }
 }
